# fastpmr

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
benchmarks/: pixi.toml  pyproject.toml  ruff.toml
benchmarks/aadr/: aadr_utils.py  analyze_aadr_data.py  analyze_aadr_results.py  prepare_aadr_data.py  run_fastpmr.py  run_fastpmr_aadr.py
benchmarks/aadr/results/analysis/: diff_master_id_low_pmr.csv  same_master_id_high_pmr.csv
benchmarks/benchmark_utils/: __init__.py  core.py
benchmarks/perf/: pair_count_benchmark.py  plot_benchmark_results.py  prepare_indo_european_data.py  readv2_benchmark.py  thread_count_benchmark.py  variant_count_benchmark.py
benchmarks/perf/results/: variant_count_benchmark.csv
benchmarks/runtime/: benchmark_utils.py  pair_count_benchmark.py  plot_benchmark_data.py  plot_benchmark_results.py  prepare_indo_european_data.py  readv2_benchmark.py  thread_count_benchmark.py  variant_count_benchmark.py
benchmarks/runtime/results/: pair_count_benchmark.csv  thread_count_benchmark.csv  variant_count_benchmark.csv
eval/: pyproject.toml
eval/aadr/: analyze_aadr_results.py  prepare_aadr_data.py  run_fastpmr_aadr.py
eval/aadr/results/analysis/: diff_master_id_low_pmr_annotated.csv
eval/aadr/results/runtime/: aadr_benchmark.csv
eval/comp/: run_readv2_benchmark.py
eval/eval_utils/: __init__.py  core.py
eval/perf/: pair_count_benchmark.py  plot_benchmark_results.py  plot_perf_results.py  prepare_indo_european_data.py  readv2_benchmark.py  thread_count_benchmark.py  variant_count_benchmark.py
evaluation/: pyproject.toml
evaluation/aadr/: analyze_aadr_results.py  fit_gp.py  plot_aadr_results.py  plot_pmr_map.py  plot_pmr_maps.py  plot_results.py  prepare_aadr_data.py  run_fastpmr_aadr.py  scan_aadr_pmrs.py  scan_pmrs.py
evaluation/aadr/results/analysis/: diff_master_id_low_pmr.csv  diff_master_id_low_pmr_annotated.csv  same_master_id_high_pmr.csv
evaluation/aadr/results/fastpmr/: aadr_benchmark.csv
evaluation/aadr/results/gp/: gp_model.pt
evaluation/aadr/results/maps/: pmr_map_cells.csv
evaluation/aadr/results/plots/: localities.csv  sites.csv
evaluation/aadr/results/scan/: same_master_id_high_pmr.csv
evaluation/aadr/results/scans/: diff_master_id_low_pmr.csv  diff_master_id_low_pmr_annotated.csv  potential_cross_site_relatives.csv  potential_cryptic_duplicates_annotated.csv  potential_missed_duplicates.csv  potential_missed_duplicates_annotated.csv  potential_spurious_duplicates.csv  same_master_id_high_pmr.csv
evaluation/aadr_v62/: README.txt  prepare_aadr_data.py  run_fastpmr.py  scan_pmrs.py
evaluation/comparison/: plot_comparison_results.py  plot_results.py  prepare_argentina_dataset.py  prepare_southern_cone_data.py  prepare_southern_cone_dataset.py  run_readv2_benchmark.py
evaluation/comparison/results/: readv2_comparison_benchmark.csv
evaluation/evaluation_utils/: __init__.py  core.py  plot.py
evaluation/performance/: pair_count_benchmark.py  plot_performance_results.py  plot_results.py  prepare_indo_european_data.py  thread_count_benchmark.py  variant_count_benchmark.py
evaluation/performance/results/: pair_count_benchmark.csv  thread_count_benchmark.csv  variant_count_benchmark.csv
evaluation/tests/: test_classify_cells.py
src/: cli.rs  counts.rs  degrees.rs  error.rs  main.rs  model.rs  output.rs
src/reader/: eigenstrat.rs  mod.rs  packedancestrymap.rs  plink.rs  sample_filter.rs  transposed_packedancestrymap.rs  unpacked_eigenstrat.rs
src/reader/common/: eigenstrat.rs  mod.rs
tests/: cli.rs
tests/common/: mod.rs
