[package]
name = "fastpmr"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
indicatif = "0.18.0"
itertools = "0.14.0"
miette = { version = "7.6.0", features = ["fancy"] }
# Use ab_glyph to avoid font discovery issues
plotters = { version = "0.3.7", default-features = false, features = ["ab_glyph", "bitmap_backend", "bitmap_encoder"] }
rayon = "1.11.0"
thiserror = "2.0.16"
