[package]
name = "fastpmr"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
indicatif = "0.18.0"
itertools = "0.14.0"
memmap2 = "0.9.9"
miette = { version = "7.6.0", features = ["fancy"] }
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
# Use ab_glyph to avoid font discovery issues
plotters = { version = "0.3.7", default-features = false, features = ["ab_glyph", "bitmap_backend", "bitmap_encoder"] }
rayon = "1.11.0"
serde_json = "1.0.145"
thiserror = "2.0.16"
zip = "6.0.0"
