[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-utils"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark_utils"]

[tool.pixi.workspace]
name = "fastpmr-benchmarks"
version = "0.1.0"
description = "Pixi environment for running fastpmr benchmarks."
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
admixtools = ">=8.0.2,<9"
bash = ">=5.2.37,<6"
coreutils = ">=9.5,<10"
# Benchmark against bioconda package, not a local build
fastpmr = "==0.1.0"
findutils = ">=4.10.0,<5"
pandas = ">=3.0.1,<4"
python = ">=3.10,<3.15"
matplotlib = ">=3.10.8,<4"
numpy = ">=2.4.1,<3"
scipy = ">=1.17.0,<2"
seaborn = ">=0.13.2,<0.14"

[tool.pixi.pypi-dependencies]
benchmark-utils = { path = ".", editable = true }
plinkio = ">=0.9.8, <0.10"

[tool.pixi.tasks]
prepare-aadr = "python aadr/prepare_aadr_data.py"
fastpmr-aadr = "python aadr/run_fastpmr_aadr.py"
analyze-aadr = "python aadr/analyze_aadr_results.py"

prepare-perf-benchmarks = "python perf/prepare_indo_european_data.py"
pairs-benchmark = "python perf/pair_count_benchmark.py"
variants-benchmark = "python perf/variant_count_benchmark.py"
threads-benchmark = "python perf/thread_count_benchmark.py"
readv2-benchmark = "python perf/readv2_benchmark.py"
plot-perf-benchmarks = "python perf/plot_benchmark_results.py"

aadr-pipeline = [
    { task = "prepare-aadr" },
    { task = "fastpmr-aadr" },
    { task = "analyze-aadr" },
]
perf-pipeline = [
    { task = "prepare-perf-benchmarks" },
    { task = "pairs-benchmark" },
    { task = "variants-benchmark" },
    { task = "threads-benchmark" },
    { task = "readv2-benchmark" },
    { task = "plot-perf-benchmarks" },
]

[tool.ruff]
line-length = 120
exclude = ["perf/READv2/READ2.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
